# dominion

./: .clang-format  .clang-tidy  .cppcheck_suppressions  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  compile.sh
docker/: Dockerfile  docker-compose.yml
doxygen/: Doxyfile  logo.css
modules/client/: CMakeLists.txt  client_main.cpp
modules/client/include/: client_listener.h  client_network_manager.h  connection_inputs.h  controller_event.h  dominion.h  game_controller.h  gui.h  gui_event_receiver.h
modules/client/include/client/: client_listener.h  client_network_manager.h  dominion.h  example.h
modules/client/include/panels/: board_panel.h  card_selection_panel.h  enemy_info_panel.h  lobby_panel.h  main_game_panel.h  phase_info_panel.h  player_panel.h  victory_screen_panel.h
modules/client/include/uiElements/: enemy_panel.h  formatting_constants.h  image_map.h  image_panel.h  input_field.h  pile_panel.h  popup.h  single_card_panel.h  text_format.h  text_panel.h
modules/client/include/windows/: game_window.h
modules/client/src/: client_core.cpp  client_listener.cpp  client_main.cpp  client_network_manager.cpp  controller_event.cpp  dominion.cpp  dominion.h  example.cpp  game_controller.cpp  game_controller.h  gui.cpp  gui_event_receiver.cpp  main.cpp
modules/client/src/panels/: board_panel.cpp  board_panel.h  card_selection_panel.cpp  connection_panel.cpp  connection_panel.h  enemy_info_panel.cpp  enemy_info_panel.h  lobby_panel.cpp  lobby_panel.h  main_game_panel.cpp  main_game_panel.h  phase_info_panel.cpp  pile_panel.cpp  pile_panel.h  player_panel.cpp  player_panel.h  victory_screen_panel.cpp
modules/client/src/uiElements/: enemy_panel.cpp  image_map.cpp  image_panel.cpp  image_panel.h  input_field.cpp  pile_panel.cpp  popup.cpp  single_card_panel.cpp  text_format.cpp
modules/client/src/windows/: game_window.cpp  game_window.h
modules/server/: CMakeLists.txt  server_main.cpp
modules/server/include/server/: args.h  debug_mode.h  example.h  game_state.h  lobbies.h  lobby.h  lobby_manager.h  message_handler.h  message_interface.h  networking.h  server_network_manager.h
modules/server/include/server/game/: behaviour_base.h  behaviour_chain.h  behaviour_helper.hpp  behaviour_registry.h  behaviours_impl.hpp  game.h  game_interface.h  game_state.h  game_state.hpp  server_board.h  server_player.h  server_player.hpp  victory_card_behaviours.h
modules/server/include/server/game/cards/: cards.h
modules/server/include/server/game/cards/cards_core/: behaviours.h  behaviours_impl.hpp  card_factory.h  server_card.h
modules/server/include/server/game/cards/cards_new/: behaviour_chain.h  behaviour_map.h  behaviour_registry.h
modules/server/include/server/game/game_state/: behaviour.h  behaviour_base.h  behaviour_chain.h  behaviour_registry.h  behaviours_impl.hpp  game_interface.h  game_state.h  server_board.h  server_player.h
modules/server/include/server/lobbies/: lobby.h  lobby_manager.h
modules/server/include/server/message/: order_response.h
modules/server/include/server/network/: basic_network.h  message_handler.h  message_interface.h  server_network_manager.h
modules/server/src/: args.cpp  basic_network.cpp  example.cpp  game_state.cpp  lobby.cpp  lobby_manager.cpp  main.cpp  message_handler.cpp  message_interface.cpp  server_core.cpp  server_main.cpp  server_network_manager.cpp
modules/server/src/game/: behaviour_chain.cpp  behaviour_registry.cpp  game_interface.cpp  game_state.cpp  server_board.cpp  server_player.cpp
modules/server/src/game_state/: action_handler.cpp  behaviour_chain.cpp  behaviour_registry.cpp  cards.cpp  game_interface.cpp  game_state.cpp  server_board.cpp  server_player.cpp
modules/server/src/lobbies/: lobby.cpp  lobby_manager.cpp
modules/server/src/message/: order_response.cpp
modules/server/src/network/: basic_network.cpp  message_handler.cpp  message_interface.cpp  server_network_manager.cpp
modules/shared/: CMakeLists.txt
modules/shared/include/: board.h  cards.h  deck.h  game_state.h  player.h  types.h
modules/shared/include/card_types/: card_base.h  card_factory.h  curse_cards.h  kingdom_cards.h  treasure_cards.h  types.h  victory_cards.h
modules/shared/include/shared/: action_decision.h  action_order.h  example.h  game_state.h  message_types.h  player_result.h
modules/shared/include/shared/game/cards/: card_base.h  card_factory.h
modules/shared/include/shared/game/game_state/: board_base.h  game_phase.h  player_base.h  reduced_game_state.h
modules/shared/include/shared/game/reduced/: player.h
modules/shared/include/shared/utils/: assert.h  colors.h  exception.h  json.h  json_macros.h  logger.h  test.h  test_helpers.h  utils.h  uuid_generator.h
modules/shared/src/: action_decision.cpp  action_order.cpp  example.cpp  game_state.cpp  main.cpp  player_result.cpp
modules/shared/src/game/: board_base.cpp  cards.cpp  game_phase.cpp  player_base.cpp  reduced_game_state.cpp  reduced_player.cpp
modules/shared/src/message_types/: from_json.cpp  other.cpp  to_json.cpp
modules/shared/src/utils/: json.cpp  logger.cpp  test_helpers.cpp
scripts/: build_images.sh  compile.sh  (+5 more)
tests/: CMakeLists.txt  client_tests.cpp
tests/client_tests/: CMakeLists.txt  client_tests.cpp
tests/server_tests/: CMakeLists.txt  server_tests.cpp
tests/shared_tests/: CMakeLists.txt  shared_tests.cpp
unit_tests/client/: CMakeLists.txt  test.cpp
unit_tests/server/: CMakeLists.txt  create_game.cpp  lobby_lobbymanager.cpp  test.cpp
unit_tests/server/game/: server_player.cpp
unit_tests/server/game/cards/: behaviour.cpp  card.cpp  card_test.cpp
unit_tests/server/game/gamestate/: server_board.cpp  server_gamestate.cpp  server_player.cpp  server_player_helpers.cpp
unit_tests/server/lobbies/: lobby_lobbymanager.cpp  mock_templates.h
unit_tests/shared/: CMakeLists.txt  game_state.cpp  json_conversion.cpp  test.cpp
unit_tests/shared/game/: board_base.cpp  card_base.cpp  game_state.cpp  player_base.cpp
unit_tests/shared/message_types/: constructors.cpp  equality.cpp  json_conversion.cpp
(+11 files in other folders)
